BukkitEventValues - cleanup