@@ -150,6 +150,7 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.Recipe;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.potion.PotionType;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.HashSet;
@@ -170,22 +171,20 @@ public final class BukkitEventValues {
 	static {
 
 		// === WorldEvents ===
-		EventValues.registerEventValue(WorldEvent.class, World.class, new Getter<World, WorldEvent>() {
+		EventValues.registerEventValue(WorldEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final WorldEvent e) {
+			public @NotNull World get(final WorldEvent e) {
 				return e.getWorld();
 			}
 		}, 0);
 		// StructureGrowEvent - a WorldEvent
-		EventValues.registerEventValue(StructureGrowEvent.class, Block.class, new Getter<Block, StructureGrowEvent>() {
+		EventValues.registerEventValue(StructureGrowEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final StructureGrowEvent e) {
+			public @NotNull Block get(final StructureGrowEvent e) {
 				return e.getLocation().getBlock();
 			}
 		}, 0);
-		EventValues.registerEventValue(StructureGrowEvent.class, Block[].class, new Getter<Block[], StructureGrowEvent>() {
+		EventValues.registerEventValue(StructureGrowEvent.class, Block[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public Block[] get(StructureGrowEvent event) {
@@ -194,10 +193,9 @@ public final class BukkitEventValues {
 					.toArray(Block[]::new);
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(StructureGrowEvent.class, Block.class, new Getter<Block, StructureGrowEvent>() {
+		EventValues.registerEventValue(StructureGrowEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(StructureGrowEvent event) {
+			public @NotNull Block get(StructureGrowEvent event) {
 				for (final BlockState bs : event.getBlocks()) {
 					if (bs.getLocation().equals(event.getLocation()))
 						return new BlockStateBlock(bs);
@@ -205,7 +203,7 @@ public final class BukkitEventValues {
 				return event.getLocation().getBlock();
 			}
 		}, EventValues.TIME_FUTURE);
-		EventValues.registerEventValue(StructureGrowEvent.class, Block[].class, new Getter<Block[], StructureGrowEvent>() {
+		EventValues.registerEventValue(StructureGrowEvent.class, Block[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public Block[] get(StructureGrowEvent event) {
@@ -215,87 +213,77 @@ public final class BukkitEventValues {
 			}
 		}, EventValues.TIME_FUTURE);
 		// WeatherEvent - not a WorldEvent (wtf ô_Ô)
-		EventValues.registerEventValue(WeatherEvent.class, World.class, new Getter<World, WeatherEvent>() {
+		EventValues.registerEventValue(WeatherEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final WeatherEvent e) {
+			public @NotNull World get(final WeatherEvent e) {
 				return e.getWorld();
 			}
 		}, 0);
 		// ChunkEvents
-		EventValues.registerEventValue(ChunkEvent.class, Chunk.class, new Getter<Chunk, ChunkEvent>() {
+		EventValues.registerEventValue(ChunkEvent.class, Chunk.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Chunk get(final ChunkEvent e) {
+			public @NotNull Chunk get(final ChunkEvent e) {
 				return e.getChunk();
 			}
 		}, 0);
 
 		// === BlockEvents ===
-		EventValues.registerEventValue(BlockEvent.class, Block.class, new Getter<Block, BlockEvent>() {
+		EventValues.registerEventValue(BlockEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockEvent e) {
+			public @NotNull Block get(final BlockEvent e) {
 				return e.getBlock();
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockEvent.class, World.class, new Getter<World, BlockEvent>() {
+		EventValues.registerEventValue(BlockEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final BlockEvent e) {
+			public @NotNull World get(final BlockEvent e) {
 				return e.getBlock().getWorld();
 			}
 		}, 0);
 		// REMIND workaround of the event's location being at the entity in block events that have an entity event value
-		EventValues.registerEventValue(BlockEvent.class, Location.class, new Getter<Location, BlockEvent>() {
+		EventValues.registerEventValue(BlockEvent.class, Location.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Location get(final BlockEvent e) {
+			public @NotNull Location get(final BlockEvent e) {
 				return e.getBlock().getLocation();
 			}
 		}, 0);
 		// BlockPlaceEvent
-		EventValues.registerEventValue(BlockPlaceEvent.class, Player.class, new Getter<Player, BlockPlaceEvent>() {
+		EventValues.registerEventValue(BlockPlaceEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final BlockPlaceEvent e) {
+			public @NotNull Player get(final BlockPlaceEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockPlaceEvent.class, ItemStack.class, new Getter<ItemStack, BlockPlaceEvent>() {
+		EventValues.registerEventValue(BlockPlaceEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(BlockPlaceEvent event) {
+			public @NotNull ItemStack get(BlockPlaceEvent event) {
 				return event.getItemInHand();
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(BlockPlaceEvent.class, ItemStack.class, new Getter<ItemStack, BlockPlaceEvent>() {
+		EventValues.registerEventValue(BlockPlaceEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(BlockPlaceEvent event) {
+			public @NotNull ItemStack get(BlockPlaceEvent event) {
 				return event.getItemInHand();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(BlockPlaceEvent.class, ItemStack.class, new Getter<ItemStack, BlockPlaceEvent>() {
+		EventValues.registerEventValue(BlockPlaceEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(BlockPlaceEvent event) {
+			public @NotNull ItemStack get(BlockPlaceEvent event) {
 				ItemStack item = event.getItemInHand().clone();
 				if (event.getPlayer().getGameMode() != GameMode.CREATIVE)
 					item.setAmount(item.getAmount() - 1);
 				return item;
 			}
 		}, EventValues.TIME_FUTURE);
-		EventValues.registerEventValue(BlockPlaceEvent.class, Block.class, new Getter<Block, BlockPlaceEvent>() {
+		EventValues.registerEventValue(BlockPlaceEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final BlockPlaceEvent e) {
 				return new BlockStateBlock(e.getBlockReplacedState());
 			}
 		}, -1);
-		EventValues.registerEventValue(BlockPlaceEvent.class, Direction.class, new Getter<Direction, BlockPlaceEvent>() {
+		EventValues.registerEventValue(BlockPlaceEvent.class, Direction.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Direction get(final BlockPlaceEvent e) {
+			public @NotNull Direction get(final BlockPlaceEvent e) {
 				BlockFace bf = e.getBlockPlaced().getFace(e.getBlockAgainst());
 				if (bf != null) {
 					return new Direction(new double[]{bf.getModX(), bf.getModY(), bf.getModZ()});
@@ -304,70 +292,64 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// BlockFadeEvent
-		EventValues.registerEventValue(BlockFadeEvent.class, Block.class, new Getter<Block, BlockFadeEvent>() {
+		EventValues.registerEventValue(BlockFadeEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockFadeEvent e) {
+			public @NotNull Block get(final BlockFadeEvent e) {
 				return e.getBlock();
 			}
 		}, -1);
-		EventValues.registerEventValue(BlockFadeEvent.class, Block.class, new Getter<Block, BlockFadeEvent>() {
+		EventValues.registerEventValue(BlockFadeEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final BlockFadeEvent e) {
 				return new DelayedChangeBlock(e.getBlock(), e.getNewState());
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockFadeEvent.class, Block.class, new Getter<Block, BlockFadeEvent>() {
+		EventValues.registerEventValue(BlockFadeEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final BlockFadeEvent e) {
 				return new BlockStateBlock(e.getNewState());
 			}
 		}, 1);
 		// BlockGrowEvent (+ BlockFormEvent)
-		EventValues.registerEventValue(BlockGrowEvent.class, Block.class, new Getter<Block, BlockGrowEvent>() {
+		EventValues.registerEventValue(BlockGrowEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockGrowEvent e) {
+			public @NotNull Block get(final BlockGrowEvent e) {
 				return new BlockStateBlock(e.getNewState());
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockGrowEvent.class, Block.class, new Getter<Block, BlockGrowEvent>() {
+		EventValues.registerEventValue(BlockGrowEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockGrowEvent e) {
+			public @NotNull Block get(final BlockGrowEvent e) {
 				return e.getBlock();
 			}
 		}, -1);
 		// BlockDamageEvent
-		EventValues.registerEventValue(BlockDamageEvent.class, Player.class, new Getter<Player, BlockDamageEvent>() {
+		EventValues.registerEventValue(BlockDamageEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final BlockDamageEvent e) {
+			public @NotNull Player get(final BlockDamageEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
 		// BlockBreakEvent
-		EventValues.registerEventValue(BlockBreakEvent.class, Player.class, new Getter<Player, BlockBreakEvent>() {
+		EventValues.registerEventValue(BlockBreakEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final BlockBreakEvent e) {
+			public @NotNull Player get(final BlockBreakEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockBreakEvent.class, Block.class, new Getter<Block, BlockBreakEvent>() {
+		EventValues.registerEventValue(BlockBreakEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockBreakEvent e) {
+			public @NotNull Block get(final BlockBreakEvent e) {
 				return e.getBlock();
 			}
 		}, -1);
-		EventValues.registerEventValue(BlockBreakEvent.class, Block.class, new Getter<Block, BlockBreakEvent>() {
+		EventValues.registerEventValue(BlockBreakEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final BlockBreakEvent e) {
 				return new DelayedChangeBlock(e.getBlock());
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockBreakEvent.class, Block.class, new Getter<Block, BlockBreakEvent>() {
+		EventValues.registerEventValue(BlockBreakEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final BlockBreakEvent e) {
 				final BlockState s = e.getBlock().getState();
@@ -377,22 +359,21 @@ public final class BukkitEventValues {
 			}
 		}, 1);
 		// BlockFromToEvent
-		EventValues.registerEventValue(BlockFromToEvent.class, Block.class, new Getter<Block, BlockFromToEvent>() {
+		EventValues.registerEventValue(BlockFromToEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockFromToEvent e) {
+			public @NotNull Block get(final BlockFromToEvent e) {
 				return e.getToBlock();
 			}
 		}, 1);
 		// BlockIgniteEvent
-		EventValues.registerEventValue(BlockIgniteEvent.class, Player.class, new Getter<Player, BlockIgniteEvent>() {
+		EventValues.registerEventValue(BlockIgniteEvent.class, Player.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Player get(final BlockIgniteEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockIgniteEvent.class, Block.class, new Getter<Block, BlockIgniteEvent>() {
+		EventValues.registerEventValue(BlockIgniteEvent.class, Block.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Block get(final BlockIgniteEvent e) {
@@ -400,22 +381,20 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// BlockDispenseEvent
-		EventValues.registerEventValue(BlockDispenseEvent.class, ItemStack.class, new Getter<ItemStack, BlockDispenseEvent>() {
+		EventValues.registerEventValue(BlockDispenseEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(final BlockDispenseEvent e) {
+			public @NotNull ItemStack get(final BlockDispenseEvent e) {
 				return e.getItem();
 			}
 		}, 0);
 		// BlockCanBuildEvent
-		EventValues.registerEventValue(BlockCanBuildEvent.class, Block.class, new Getter<Block, BlockCanBuildEvent>() {
+		EventValues.registerEventValue(BlockCanBuildEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final BlockCanBuildEvent e) {
+			public @NotNull Block get(final BlockCanBuildEvent e) {
 				return e.getBlock();
 			}
 		}, -1);
-		EventValues.registerEventValue(BlockCanBuildEvent.class, Block.class, new Getter<Block, BlockCanBuildEvent>() {
+		EventValues.registerEventValue(BlockCanBuildEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final BlockCanBuildEvent e) {
 				final BlockState s = e.getBlock().getState();
@@ -425,7 +404,7 @@ public final class BukkitEventValues {
 		}, 0);
 		// BlockCanBuildEvent#getPlayer was added in 1.13
 		if (Skript.methodExists(BlockCanBuildEvent.class, "getPlayer")) {
-			EventValues.registerEventValue(BlockCanBuildEvent.class, Player.class, new Getter<Player, BlockCanBuildEvent>() {
+			EventValues.registerEventValue(BlockCanBuildEvent.class, Player.class, new Getter<>() {
 				@Override
 				@Nullable
 				public Player get(final BlockCanBuildEvent e) {
@@ -434,14 +413,13 @@ public final class BukkitEventValues {
 			}, 0);
 		}
 		// SignChangeEvent
-		EventValues.registerEventValue(SignChangeEvent.class, Player.class, new Getter<Player, SignChangeEvent>() {
+		EventValues.registerEventValue(SignChangeEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final SignChangeEvent e) {
+			public @NotNull Player get(final SignChangeEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(SignChangeEvent.class, String[].class, new Getter<String[], SignChangeEvent>() {
+		EventValues.registerEventValue(SignChangeEvent.class, String[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public String[] get(SignChangeEvent event) {
@@ -450,43 +428,38 @@ public final class BukkitEventValues {
 		}, EventValues.TIME_NOW);
 
 		// === EntityEvents ===
-		EventValues.registerEventValue(EntityEvent.class, Entity.class, new Getter<Entity, EntityEvent>() {
+		EventValues.registerEventValue(EntityEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(final EntityEvent e) {
+			public @NotNull Entity get(final EntityEvent e) {
 				return e.getEntity();
 			}
 		}, 0, "Use 'attacker' and/or 'victim' in damage/death events", EntityDamageEvent.class, EntityDeathEvent.class);
-		EventValues.registerEventValue(EntityEvent.class, CommandSender.class, new Getter<CommandSender, EntityEvent>() {
+		EventValues.registerEventValue(EntityEvent.class, CommandSender.class, new Getter<>() {
 			@Override
-			@Nullable
-			public CommandSender get(final EntityEvent e) {
+			public @NotNull CommandSender get(final EntityEvent e) {
 				return e.getEntity();
 			}
 		}, 0, "Use 'attacker' and/or 'victim' in damage/death events", EntityDamageEvent.class, EntityDeathEvent.class);
-		EventValues.registerEventValue(EntityEvent.class, World.class, new Getter<World, EntityEvent>() {
+		EventValues.registerEventValue(EntityEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final EntityEvent e) {
+			public @NotNull World get(final EntityEvent e) {
 				return e.getEntity().getWorld();
 			}
 		}, 0);
-		EventValues.registerEventValue(EntityEvent.class, Location.class, new Getter<Location, EntityEvent>() {
+		EventValues.registerEventValue(EntityEvent.class, Location.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Location get(final EntityEvent e) {
+			public @NotNull Location get(final EntityEvent e) {
 				return e.getEntity().getLocation();
 			}
 		}, 0);
 		// EntityDamageEvent
-		EventValues.registerEventValue(EntityDamageEvent.class, DamageCause.class, new Getter<DamageCause, EntityDamageEvent>() {
+		EventValues.registerEventValue(EntityDamageEvent.class, DamageCause.class, new Getter<>() {
 			@Override
-			@Nullable
-			public DamageCause get(final EntityDamageEvent e) {
+			public @NotNull DamageCause get(final EntityDamageEvent e) {
 				return e.getCause();
 			}
 		}, 0);
-		EventValues.registerEventValue(EntityDamageByEntityEvent.class, Projectile.class, new Getter<Projectile, EntityDamageByEntityEvent>() {
+		EventValues.registerEventValue(EntityDamageByEntityEvent.class, Projectile.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Projectile get(final EntityDamageByEntityEvent e) {
@@ -496,14 +469,14 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// EntityDeathEvent
-		EventValues.registerEventValue(EntityDeathEvent.class, ItemStack[].class, new Getter<ItemStack[], EntityDeathEvent>() {
+		EventValues.registerEventValue(EntityDeathEvent.class, ItemStack[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack[] get(EntityDeathEvent event) {
 				return event.getDrops().toArray(new ItemStack[0]);
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(EntityDeathEvent.class, Projectile.class, new Getter<Projectile, EntityDeathEvent>() {
+		EventValues.registerEventValue(EntityDeathEvent.class, Projectile.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Projectile get(final EntityDeathEvent e) {
@@ -513,7 +486,7 @@ public final class BukkitEventValues {
 				return null;
 			}
 		}, 0);
-		EventValues.registerEventValue(EntityDeathEvent.class, DamageCause.class, new Getter<DamageCause, EntityDeathEvent>() {
+		EventValues.registerEventValue(EntityDeathEvent.class, DamageCause.class, new Getter<>() {
 			@Override
 			@Nullable
 			public DamageCause get(final EntityDeathEvent e) {
@@ -524,30 +497,28 @@ public final class BukkitEventValues {
 		// ProjectileHitEvent
 		// ProjectileHitEvent#getHitBlock was added in 1.11
 		if (Skript.methodExists(ProjectileHitEvent.class, "getHitBlock"))
-			EventValues.registerEventValue(ProjectileHitEvent.class, Block.class, new Getter<Block, ProjectileHitEvent>() {
+			EventValues.registerEventValue(ProjectileHitEvent.class, Block.class, new Getter<>() {
 				@Nullable
 				@Override
 				public Block get(ProjectileHitEvent e) {
 					return e.getHitBlock();
 				}
 			}, 0);
-		EventValues.registerEventValue(ProjectileHitEvent.class, Entity.class, new Getter<Entity, ProjectileHitEvent>() {
+		EventValues.registerEventValue(ProjectileHitEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(final ProjectileHitEvent e) {
+			public @NotNull Entity get(final ProjectileHitEvent e) {
 				assert false;
 				return e.getEntity();
 			}
 		}, 0, "Use 'projectile' and/or 'shooter' in projectile hit events", ProjectileHitEvent.class);
-		EventValues.registerEventValue(ProjectileHitEvent.class, Projectile.class, new Getter<Projectile, ProjectileHitEvent>() {
+		EventValues.registerEventValue(ProjectileHitEvent.class, Projectile.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Projectile get(final ProjectileHitEvent e) {
+			public @NotNull Projectile get(final ProjectileHitEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
 		if (Skript.methodExists(ProjectileHitEvent.class, "getHitBlockFace")) {
-			EventValues.registerEventValue(ProjectileHitEvent.class, Direction.class, new Getter<Direction, ProjectileHitEvent>() {
+			EventValues.registerEventValue(ProjectileHitEvent.class, Direction.class, new Getter<>() {
 				@Override
 				@Nullable
 				public Direction get(final ProjectileHitEvent e) {
@@ -558,55 +529,50 @@ public final class BukkitEventValues {
 			}, 0);
 		}
 		// ProjectileLaunchEvent
-		EventValues.registerEventValue(ProjectileLaunchEvent.class, Entity.class, new Getter<Entity, ProjectileLaunchEvent>() {
+		EventValues.registerEventValue(ProjectileLaunchEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(final ProjectileLaunchEvent e) {
+			public @NotNull Entity get(final ProjectileLaunchEvent e) {
 				assert false;
 				return e.getEntity();
 			}
 		}, 0, "Use 'projectile' and/or 'shooter' in shoot events", ProjectileLaunchEvent.class);
 		//ProjectileCollideEvent
 		if (Skript.classExists("com.destroystokyo.paper.event.entity.ProjectileCollideEvent")) {
-			EventValues.registerEventValue(ProjectileCollideEvent.class, Projectile.class, new Getter<Projectile, ProjectileCollideEvent>() {
-				@Nullable
+			EventValues.registerEventValue(ProjectileCollideEvent.class, Projectile.class, new Getter<>() {
 				@Override
-				public Projectile get(ProjectileCollideEvent evt) {
+				public @NotNull Projectile get(ProjectileCollideEvent evt) {
 					return evt.getEntity();
 				}
 			}, 0);
-			EventValues.registerEventValue(ProjectileCollideEvent.class, Entity.class, new Getter<Entity, ProjectileCollideEvent>() {
-				@Nullable
+			EventValues.registerEventValue(ProjectileCollideEvent.class, Entity.class, new Getter<>() {
 				@Override
-				public Entity get(ProjectileCollideEvent evt) {
+				public @NotNull Entity get(ProjectileCollideEvent evt) {
 					return evt.getCollidedWith();
 				}
 			}, 0);
 		}
-		EventValues.registerEventValue(ProjectileLaunchEvent.class, Projectile.class, new Getter<Projectile, ProjectileLaunchEvent>() {
+		EventValues.registerEventValue(ProjectileLaunchEvent.class, Projectile.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Projectile get(final ProjectileLaunchEvent e) {
+			public @NotNull Projectile get(final ProjectileLaunchEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
 		// EntityTameEvent
-		EventValues.registerEventValue(EntityTameEvent.class, Entity.class, new Getter<Entity, EntityTameEvent>() {
+		EventValues.registerEventValue(EntityTameEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(final EntityTameEvent e) {
+			public @NotNull Entity get(final EntityTameEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
 
 		// EntityTeleportEvent
-		EventValues.registerEventValue(EntityTeleportEvent.class, Location.class, new Getter<Location, EntityTeleportEvent>() {
+		EventValues.registerEventValue(EntityTeleportEvent.class, Location.class, new Getter<>() {
 			@Override
-			public @Nullable Location get(EntityTeleportEvent event) {
+			public @NotNull Location get(EntityTeleportEvent event) {
 				return event.getFrom();
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(EntityTeleportEvent.class, Location.class, new Getter<Location, EntityTeleportEvent>() {
+		EventValues.registerEventValue(EntityTeleportEvent.class, Location.class, new Getter<>() {
 			@Override
 			public @Nullable Location get(EntityTeleportEvent event) {
 				return event.getTo();
@@ -614,44 +580,40 @@ public final class BukkitEventValues {
 		}, EventValues.TIME_NOW);
 
 		// EntityChangeBlockEvent
-		EventValues.registerEventValue(EntityChangeBlockEvent.class, Block.class, new Getter<Block, EntityChangeBlockEvent>() {
+		EventValues.registerEventValue(EntityChangeBlockEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(EntityChangeBlockEvent event) {
+			public @NotNull Block get(EntityChangeBlockEvent event) {
 				return event.getBlock();
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(EntityChangeBlockEvent.class, Block.class, new Getter<Block, EntityChangeBlockEvent>() {
+		EventValues.registerEventValue(EntityChangeBlockEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(EntityChangeBlockEvent event) {
+			public @NotNull Block get(EntityChangeBlockEvent event) {
 				return event.getBlock();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(EntityChangeBlockEvent.class, BlockData.class, new Getter<BlockData, EntityChangeBlockEvent>() {
+		EventValues.registerEventValue(EntityChangeBlockEvent.class, BlockData.class, new Getter<>() {
 			@Override
-			@Nullable
-			public BlockData get(EntityChangeBlockEvent event) {
+			public @NotNull BlockData get(EntityChangeBlockEvent event) {
 				return event.getBlockData();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(EntityChangeBlockEvent.class, BlockData.class, new Getter<BlockData, EntityChangeBlockEvent>() {
+		EventValues.registerEventValue(EntityChangeBlockEvent.class, BlockData.class, new Getter<>() {
 			@Override
-			@Nullable
-			public BlockData get(EntityChangeBlockEvent event) {
+			public @NotNull BlockData get(EntityChangeBlockEvent event) {
 				return event.getBlockData();
 			}
 		}, EventValues.TIME_FUTURE);
 
 		// AreaEffectCloudApplyEvent
-		EventValues.registerEventValue(AreaEffectCloudApplyEvent.class, LivingEntity[].class, new Getter<LivingEntity[], AreaEffectCloudApplyEvent>() {
+		EventValues.registerEventValue(AreaEffectCloudApplyEvent.class, LivingEntity[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public LivingEntity[] get(AreaEffectCloudApplyEvent event) {
 				return event.getAffectedEntities().toArray(new LivingEntity[0]);
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(AreaEffectCloudApplyEvent.class, PotionEffectType.class, new Getter<PotionEffectType, AreaEffectCloudApplyEvent>() {
+		EventValues.registerEventValue(AreaEffectCloudApplyEvent.class, PotionEffectType.class, new Getter<>() {
 			private final boolean HAS_POTION_TYPE_METHOD = Skript.methodExists(AreaEffectCloud.class, "getBasePotionType");
 
 			@Override
@@ -663,21 +625,21 @@ public final class BukkitEventValues {
 					if (base != null)
 						return base.getEffectType();
 				} else {
+					//noinspection removal,DataFlowIssue
 					return e.getEntity().getBasePotionData().getType().getEffectType();
 				}
 				return null;
 			}
 		}, 0);
 		// ItemSpawnEvent
-		EventValues.registerEventValue(ItemSpawnEvent.class, ItemStack.class, new Getter<ItemStack, ItemSpawnEvent>() {
+		EventValues.registerEventValue(ItemSpawnEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(final ItemSpawnEvent e) {
+			public @NotNull ItemStack get(final ItemSpawnEvent e) {
 				return e.getEntity().getItemStack();
 			}
 		}, 0);
 		// LightningStrikeEvent
-		EventValues.registerEventValue(LightningStrikeEvent.class, Entity.class, new Getter<Entity, LightningStrikeEvent>() {
+		EventValues.registerEventValue(LightningStrikeEvent.class, Entity.class, new Getter<>() {
 			@Override
 			public Entity get(LightningStrikeEvent event) {
 				return event.getLightning();
@@ -685,7 +647,7 @@ public final class BukkitEventValues {
 		}, 0);
 		// EndermanAttackPlayerEvent
 		if (Skript.classExists("com.destroystokyo.paper.event.entity.EndermanAttackPlayerEvent")) {
-			EventValues.registerEventValue(EndermanAttackPlayerEvent.class, Player.class, new Getter<Player, EndermanAttackPlayerEvent>() {
+			EventValues.registerEventValue(EndermanAttackPlayerEvent.class, Player.class, new Getter<>() {
 				@Override
 				public Player get(EndermanAttackPlayerEvent event) {
 					return event.getPlayer();
@@ -694,62 +656,55 @@ public final class BukkitEventValues {
 		}
 
 		// --- PlayerEvents ---
-		EventValues.registerEventValue(PlayerEvent.class, Player.class, new Getter<Player, PlayerEvent>() {
+		EventValues.registerEventValue(PlayerEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final PlayerEvent e) {
+			public @NotNull Player get(final PlayerEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerEvent.class, World.class, new Getter<World, PlayerEvent>() {
+		EventValues.registerEventValue(PlayerEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final PlayerEvent e) {
+			public @NotNull World get(final PlayerEvent e) {
 				return e.getPlayer().getWorld();
 			}
 		}, 0);
 		// PlayerBedEnterEvent
-		EventValues.registerEventValue(PlayerBedEnterEvent.class, Block.class, new Getter<Block, PlayerBedEnterEvent>() {
+		EventValues.registerEventValue(PlayerBedEnterEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final PlayerBedEnterEvent e) {
+			public @NotNull Block get(final PlayerBedEnterEvent e) {
 				return e.getBed();
 			}
 		}, 0);
 		// PlayerBedLeaveEvent
-		EventValues.registerEventValue(PlayerBedLeaveEvent.class, Block.class, new Getter<Block, PlayerBedLeaveEvent>() {
+		EventValues.registerEventValue(PlayerBedLeaveEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final PlayerBedLeaveEvent e) {
+			public @NotNull Block get(final PlayerBedLeaveEvent e) {
 				return e.getBed();
 			}
 		}, 0);
 		// PlayerBucketEvents
-		EventValues.registerEventValue(PlayerBucketFillEvent.class, Block.class, new Getter<Block, PlayerBucketFillEvent>() {
+		EventValues.registerEventValue(PlayerBucketFillEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final PlayerBucketFillEvent e) {
+			public @NotNull Block get(final PlayerBucketFillEvent e) {
 				return e.getBlockClicked();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerBucketFillEvent.class, Block.class, new Getter<Block, PlayerBucketFillEvent>() {
+		EventValues.registerEventValue(PlayerBucketFillEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final PlayerBucketFillEvent e) {
+			public @NotNull Block get(final PlayerBucketFillEvent e) {
 				final BlockState s = e.getBlockClicked().getState();
 				s.setType(Material.AIR);
 				s.setRawData((byte) 0);
 				return new BlockStateBlock(s, true);
 			}
 		}, 1);
-		EventValues.registerEventValue(PlayerBucketEmptyEvent.class, Block.class, new Getter<Block, PlayerBucketEmptyEvent>() {
+		EventValues.registerEventValue(PlayerBucketEmptyEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(final PlayerBucketEmptyEvent e) {
+			public @NotNull Block get(final PlayerBucketEmptyEvent e) {
 				return e.getBlockClicked().getRelative(e.getBlockFace());
 			}
 		}, -1);
-		EventValues.registerEventValue(PlayerBucketEmptyEvent.class, Block.class, new Getter<Block, PlayerBucketEmptyEvent>() {
+		EventValues.registerEventValue(PlayerBucketEmptyEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(final PlayerBucketEmptyEvent e) {
 				final BlockState s = e.getBlockClicked().getRelative(e.getBlockFace()).getState();
@@ -759,101 +714,91 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// PlayerDropItemEvent
-		EventValues.registerEventValue(PlayerDropItemEvent.class, Player.class, new Getter<Player, PlayerDropItemEvent>() {
+		EventValues.registerEventValue(PlayerDropItemEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(PlayerDropItemEvent e) {
+			public @NotNull Player get(PlayerDropItemEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerDropItemEvent.class, Item.class, new Getter<Item, PlayerDropItemEvent>() {
+		EventValues.registerEventValue(PlayerDropItemEvent.class, Item.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Item get(final PlayerDropItemEvent e) {
+			public @NotNull Item get(final PlayerDropItemEvent e) {
 				return e.getItemDrop();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerDropItemEvent.class, ItemStack.class, new Getter<ItemStack, PlayerDropItemEvent>() {
+		EventValues.registerEventValue(PlayerDropItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(final PlayerDropItemEvent e) {
+			public @NotNull ItemStack get(final PlayerDropItemEvent e) {
 				return e.getItemDrop().getItemStack();
 			}
 		}, 0);
 		// EntityDropItemEvent
-		EventValues.registerEventValue(EntityDropItemEvent.class, Item.class, new Getter<Item, EntityDropItemEvent>() {
+		EventValues.registerEventValue(EntityDropItemEvent.class, Item.class, new Getter<>() {
 			@Override
 			public Item get(EntityDropItemEvent event) {
 				return event.getItemDrop();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(EntityDropItemEvent.class, ItemStack.class, new Getter<ItemStack, EntityDropItemEvent>() {
+		EventValues.registerEventValue(EntityDropItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(EntityDropItemEvent event) {
 				return event.getItemDrop().getItemStack();
 			}
 		}, EventValues.TIME_NOW);
 		// PlayerPickupItemEvent
-		EventValues.registerEventValue(PlayerPickupItemEvent.class, Player.class, new Getter<Player, PlayerPickupItemEvent>() {
+		EventValues.registerEventValue(PlayerPickupItemEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(PlayerPickupItemEvent e) {
+			public @NotNull Player get(PlayerPickupItemEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerPickupItemEvent.class, Item.class, new Getter<Item, PlayerPickupItemEvent>() {
+		EventValues.registerEventValue(PlayerPickupItemEvent.class, Item.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Item get(final PlayerPickupItemEvent e) {
+			public @NotNull Item get(final PlayerPickupItemEvent e) {
 				return e.getItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerPickupItemEvent.class, ItemStack.class, new Getter<ItemStack, PlayerPickupItemEvent>() {
+		EventValues.registerEventValue(PlayerPickupItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(final PlayerPickupItemEvent e) {
+			public @NotNull ItemStack get(final PlayerPickupItemEvent e) {
 				return e.getItem().getItemStack();
 			}
 		}, 0);
 		// EntityPickupItemEvent
-		EventValues.registerEventValue(EntityPickupItemEvent.class, Entity.class, new Getter<Entity, EntityPickupItemEvent>() {
+		EventValues.registerEventValue(EntityPickupItemEvent.class, Entity.class, new Getter<>() {
 			@Override
-			public @Nullable Entity get(EntityPickupItemEvent e) {
+			public @NotNull Entity get(EntityPickupItemEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
-		EventValues.registerEventValue(EntityPickupItemEvent.class, Item.class, new Getter<Item, EntityPickupItemEvent>() {
+		EventValues.registerEventValue(EntityPickupItemEvent.class, Item.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Item get(final EntityPickupItemEvent e) {
+			public @NotNull Item get(final EntityPickupItemEvent e) {
 				return e.getItem();
 			}
 		}, 0);
 		// PlayerItemConsumeEvent
-		EventValues.registerEventValue(PlayerItemConsumeEvent.class, ItemStack.class, new Getter<ItemStack, PlayerItemConsumeEvent>() {
+		EventValues.registerEventValue(PlayerItemConsumeEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(final PlayerItemConsumeEvent e) {
+			public @NotNull ItemStack get(final PlayerItemConsumeEvent e) {
 				return e.getItem();
 			}
 		}, 0);
 		// PlayerItemBreakEvent
-		EventValues.registerEventValue(PlayerItemBreakEvent.class, ItemStack.class, new Getter<ItemStack, PlayerItemBreakEvent>() {
+		EventValues.registerEventValue(PlayerItemBreakEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(final PlayerItemBreakEvent e) {
+			public @NotNull ItemStack get(final PlayerItemBreakEvent e) {
 				return e.getBrokenItem();
 			}
 		}, 0);
 		// PlayerInteractEntityEvent
-		EventValues.registerEventValue(PlayerInteractEntityEvent.class, Entity.class, new Getter<Entity, PlayerInteractEntityEvent>() {
+		EventValues.registerEventValue(PlayerInteractEntityEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(final PlayerInteractEntityEvent e) {
+			public @NotNull Entity get(final PlayerInteractEntityEvent e) {
 				return e.getRightClicked();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerInteractEntityEvent.class, ItemStack.class, new Getter<ItemStack, PlayerInteractEntityEvent>() {
+		EventValues.registerEventValue(PlayerInteractEntityEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack get(final PlayerInteractEntityEvent e) {
@@ -867,92 +812,87 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// PlayerInteractEvent
-		EventValues.registerEventValue(PlayerInteractEvent.class, ItemStack.class, new Getter<ItemStack, PlayerInteractEvent>() {
+		EventValues.registerEventValue(PlayerInteractEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack get(final PlayerInteractEvent e) {
 				return e.getItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerInteractEvent.class, Block.class, new Getter<Block, PlayerInteractEvent>() {
+		EventValues.registerEventValue(PlayerInteractEvent.class, Block.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Block get(final PlayerInteractEvent e) {
 				return e.getClickedBlock();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerInteractEvent.class, Direction.class, new Getter<Direction, PlayerInteractEvent>() {
+		EventValues.registerEventValue(PlayerInteractEvent.class, Direction.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Direction get(final PlayerInteractEvent e) {
+			public @NotNull Direction get(final PlayerInteractEvent e) {
 				return new Direction(new double[]{e.getBlockFace().getModX(), e.getBlockFace().getModY(), e.getBlockFace().getModZ()});
 			}
 		}, 0);
 		// PlayerShearEntityEvent
-		EventValues.registerEventValue(PlayerShearEntityEvent.class, Entity.class, new Getter<Entity, PlayerShearEntityEvent>() {
+		EventValues.registerEventValue(PlayerShearEntityEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(final PlayerShearEntityEvent e) {
+			public @NotNull Entity get(final PlayerShearEntityEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
 		// PlayerMoveEvent
-		EventValues.registerEventValue(PlayerMoveEvent.class, Block.class, new Getter<Block, PlayerMoveEvent>() {
+		EventValues.registerEventValue(PlayerMoveEvent.class, Block.class, new Getter<>() {
 			@Override
 			public Block get(PlayerMoveEvent event) {
 				return event.getTo().clone().subtract(0, 0.5, 0).getBlock();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(PlayerMoveEvent.class, Location.class, new Getter<Location, PlayerMoveEvent>() {
+		EventValues.registerEventValue(PlayerMoveEvent.class, Location.class, new Getter<>() {
 			@Override
 			public Location get(PlayerMoveEvent event) {
 				return event.getFrom();
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(PlayerMoveEvent.class, Location.class, new Getter<Location, PlayerMoveEvent>() {
+		EventValues.registerEventValue(PlayerMoveEvent.class, Location.class, new Getter<>() {
 			@Override
 			public Location get(PlayerMoveEvent event) {
 				return event.getTo();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(PlayerMoveEvent.class, Chunk.class, new Getter<Chunk, PlayerMoveEvent>() {
+		EventValues.registerEventValue(PlayerMoveEvent.class, Chunk.class, new Getter<>() {
 			@Override
 			public Chunk get(PlayerMoveEvent event) {
 				return event.getFrom().getChunk();
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(PlayerMoveEvent.class, Chunk.class, new Getter<Chunk, PlayerMoveEvent>() {
+		EventValues.registerEventValue(PlayerMoveEvent.class, Chunk.class, new Getter<>() {
 			@Override
 			public Chunk get(PlayerMoveEvent event) {
 				return event.getTo().getChunk();
 			}
 		}, EventValues.TIME_NOW);
 		// PlayerItemDamageEvent
-		EventValues.registerEventValue(PlayerItemDamageEvent.class, ItemStack.class, new Getter<ItemStack, PlayerItemDamageEvent>() {
+		EventValues.registerEventValue(PlayerItemDamageEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(PlayerItemDamageEvent event) {
 				return event.getItem();
 			}
 		}, 0);
 		//PlayerItemMendEvent
-		EventValues.registerEventValue(PlayerItemMendEvent.class, Player.class, new Getter<Player, PlayerItemMendEvent>() {
+		EventValues.registerEventValue(PlayerItemMendEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(PlayerItemMendEvent e) {
+			public @NotNull Player get(PlayerItemMendEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerItemMendEvent.class, ItemStack.class, new Getter<ItemStack, PlayerItemMendEvent>() {
+		EventValues.registerEventValue(PlayerItemMendEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(PlayerItemMendEvent e) {
+			public @NotNull ItemStack get(PlayerItemMendEvent e) {
 				return e.getItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(PlayerItemMendEvent.class, Entity.class, new Getter<Entity, PlayerItemMendEvent>() {
+		EventValues.registerEventValue(PlayerItemMendEvent.class, Entity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Entity get(PlayerItemMendEvent e) {
+			public @NotNull Entity get(PlayerItemMendEvent e) {
 				return e.getExperienceOrb();
 			}
 		}, 0);
@@ -960,30 +900,27 @@ public final class BukkitEventValues {
 		// --- HangingEvents ---
 
 		// Note: will not work in HangingEntityBreakEvent due to event-entity being parsed as HangingBreakByEntityEvent#getRemover() from code down below
-		EventValues.registerEventValue(HangingEvent.class, Hanging.class, new Getter<Hanging, HangingEvent>() {
+		EventValues.registerEventValue(HangingEvent.class, Hanging.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Hanging get(final HangingEvent e) {
+			public @NotNull Hanging get(final HangingEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
-		EventValues.registerEventValue(HangingEvent.class, World.class, new Getter<World, HangingEvent>() {
+		EventValues.registerEventValue(HangingEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final HangingEvent e) {
+			public @NotNull World get(final HangingEvent e) {
 				return e.getEntity().getWorld();
 			}
 		}, 0);
-		EventValues.registerEventValue(HangingEvent.class, Location.class, new Getter<Location, HangingEvent>() {
+		EventValues.registerEventValue(HangingEvent.class, Location.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Location get(final HangingEvent e) {
+			public @NotNull Location get(final HangingEvent e) {
 				return e.getEntity().getLocation();
 			}
 		}, 0);
 
 		// HangingBreakEvent
-		EventValues.registerEventValue(HangingBreakEvent.class, Entity.class, new Getter<Entity, HangingBreakEvent>() {
+		EventValues.registerEventValue(HangingBreakEvent.class, Entity.class, new Getter<>() {
 			@Nullable
 			@Override
 			public Entity get(HangingBreakEvent e) {
@@ -993,7 +930,7 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// HangingPlaceEvent
-		EventValues.registerEventValue(HangingPlaceEvent.class, Player.class, new Getter<Player, HangingPlaceEvent>() {
+		EventValues.registerEventValue(HangingPlaceEvent.class, Player.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Player get(final HangingPlaceEvent e) {
@@ -1002,38 +939,34 @@ public final class BukkitEventValues {
 		}, 0);
 
 		// --- VehicleEvents ---
-		EventValues.registerEventValue(VehicleEvent.class, Vehicle.class, new Getter<Vehicle, VehicleEvent>() {
+		EventValues.registerEventValue(VehicleEvent.class, Vehicle.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Vehicle get(final VehicleEvent e) {
+			public @NotNull Vehicle get(final VehicleEvent e) {
 				return e.getVehicle();
 			}
 		}, 0);
-		EventValues.registerEventValue(VehicleEvent.class, World.class, new Getter<World, VehicleEvent>() {
+		EventValues.registerEventValue(VehicleEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final VehicleEvent e) {
+			public @NotNull World get(final VehicleEvent e) {
 				return e.getVehicle().getWorld();
 			}
 		}, 0);
-		EventValues.registerEventValue(VehicleExitEvent.class, LivingEntity.class, new Getter<LivingEntity, VehicleExitEvent>() {
+		EventValues.registerEventValue(VehicleExitEvent.class, LivingEntity.class, new Getter<>() {
 			@Override
-			@Nullable
-			public LivingEntity get(final VehicleExitEvent e) {
+			public @NotNull LivingEntity get(final VehicleExitEvent e) {
 				return e.getExited();
 			}
 		}, 0);
 
-		EventValues.registerEventValue(VehicleEnterEvent.class, Entity.class, new Getter<Entity, VehicleEnterEvent>() {
-			@Nullable
+		EventValues.registerEventValue(VehicleEnterEvent.class, Entity.class, new Getter<>() {
 			@Override
-			public Entity get(VehicleEnterEvent e) {
+			public @NotNull Entity get(VehicleEnterEvent e) {
 				return e.getEntered();
 			}
 		}, 0);
 
 		// We could error here instead but it's preferable to not do it in this case
-		EventValues.registerEventValue(VehicleDamageEvent.class, Entity.class, new Getter<Entity, VehicleDamageEvent>() {
+		EventValues.registerEventValue(VehicleDamageEvent.class, Entity.class, new Getter<>() {
 			@Nullable
 			@Override
 			public Entity get(VehicleDamageEvent e) {
@@ -1041,7 +974,7 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 
-		EventValues.registerEventValue(VehicleDestroyEvent.class, Entity.class, new Getter<Entity, VehicleDestroyEvent>() {
+		EventValues.registerEventValue(VehicleDestroyEvent.class, Entity.class, new Getter<>() {
 			@Nullable
 			@Override
 			public Entity get(VehicleDestroyEvent e) {
@@ -1049,7 +982,7 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 
-		EventValues.registerEventValue(VehicleEvent.class, Entity.class, new Getter<Entity, VehicleEvent>() {
+		EventValues.registerEventValue(VehicleEvent.class, Entity.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Entity get(final VehicleEvent e) {
@@ -1060,26 +993,25 @@ public final class BukkitEventValues {
 
 		// === CommandEvents ===
 		// PlayerCommandPreprocessEvent is a PlayerEvent
-		EventValues.registerEventValue(ServerCommandEvent.class, CommandSender.class, new Getter<CommandSender, ServerCommandEvent>() {
+		EventValues.registerEventValue(ServerCommandEvent.class, CommandSender.class, new Getter<>() {
 			@Override
-			@Nullable
-			public CommandSender get(final ServerCommandEvent e) {
+			public @NotNull CommandSender get(final ServerCommandEvent e) {
 				return e.getSender();
 			}
 		}, 0);
-		EventValues.registerEventValue(CommandEvent.class, String[].class, new Getter<String[], CommandEvent>() {
+		EventValues.registerEventValue(CommandEvent.class, String[].class, new Getter<>() {
 			@Override
 			public String[] get(CommandEvent event) {
 				return event.getArgs();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(CommandEvent.class, CommandSender.class, new Getter<CommandSender, CommandEvent>() {
+		EventValues.registerEventValue(CommandEvent.class, CommandSender.class, new Getter<>() {
 			@Override
 			public CommandSender get(final CommandEvent e) {
 				return e.getSender();
 			}
 		}, 0);
-		EventValues.registerEventValue(CommandEvent.class, World.class, new Getter<World, CommandEvent>() {
+		EventValues.registerEventValue(CommandEvent.class, World.class, new Getter<>() {
 			@Override
 			@Nullable
 			public World get(final CommandEvent e) {
@@ -1089,47 +1021,43 @@ public final class BukkitEventValues {
 
 		// === ServerEvents ===
 		// Script load/unload event
-		EventValues.registerEventValue(ScriptEvent.class, CommandSender.class, new Getter<CommandSender, ScriptEvent>() {
-			@Nullable
+		EventValues.registerEventValue(ScriptEvent.class, CommandSender.class, new Getter<>() {
 			@Override
-			public CommandSender get(ScriptEvent e) {
+			public @NotNull CommandSender get(ScriptEvent e) {
 				return Bukkit.getConsoleSender();
 			}
 		}, 0);
 		// Server load event
-		EventValues.registerEventValue(SkriptStartEvent.class, CommandSender.class, new Getter<CommandSender, SkriptStartEvent>() {
-			@Nullable
+		EventValues.registerEventValue(SkriptStartEvent.class, CommandSender.class, new Getter<>() {
 			@Override
-			public CommandSender get(SkriptStartEvent e) {
+			public @NotNull CommandSender get(SkriptStartEvent e) {
 				return Bukkit.getConsoleSender();
 			}
 		}, 0);
 		// Server stop event
-		EventValues.registerEventValue(SkriptStopEvent.class, CommandSender.class, new Getter<CommandSender, SkriptStopEvent>() {
-			@Nullable
+		EventValues.registerEventValue(SkriptStopEvent.class, CommandSender.class, new Getter<>() {
 			@Override
-			public CommandSender get(SkriptStopEvent e) {
+			public @NotNull CommandSender get(SkriptStopEvent e) {
 				return Bukkit.getConsoleSender();
 			}
 		}, 0);
 
 		// === InventoryEvents ===
 		// InventoryClickEvent
-		EventValues.registerEventValue(InventoryClickEvent.class, Player.class, new Getter<Player, InventoryClickEvent>() {
+		EventValues.registerEventValue(InventoryClickEvent.class, Player.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Player get(final InventoryClickEvent e) {
 				return e.getWhoClicked() instanceof Player ? (Player) e.getWhoClicked() : null;
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryClickEvent.class, World.class, new Getter<World, InventoryClickEvent>() {
+		EventValues.registerEventValue(InventoryClickEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final InventoryClickEvent e) {
+			public @NotNull World get(final InventoryClickEvent e) {
 				return e.getWhoClicked().getWorld();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryClickEvent.class, ItemStack.class, new Getter<ItemStack, InventoryClickEvent>() {
+		EventValues.registerEventValue(InventoryClickEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack get(final InventoryClickEvent e) {
@@ -1138,21 +1066,19 @@ public final class BukkitEventValues {
 				return e.getCurrentItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryClickEvent.class, InventoryAction.class, new Getter<InventoryAction, InventoryClickEvent>() {
+		EventValues.registerEventValue(InventoryClickEvent.class, InventoryAction.class, new Getter<>() {
 			@Override
-			@Nullable
-			public InventoryAction get(final InventoryClickEvent e) {
+			public @NotNull InventoryAction get(final InventoryClickEvent e) {
 				return e.getAction();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryClickEvent.class, ClickType.class, new Getter<ClickType, InventoryClickEvent>() {
+		EventValues.registerEventValue(InventoryClickEvent.class, ClickType.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ClickType get(final InventoryClickEvent e) {
+			public @NotNull ClickType get(final InventoryClickEvent e) {
 				return e.getClick();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryClickEvent.class, Inventory.class, new Getter<Inventory, InventoryClickEvent>() {
+		EventValues.registerEventValue(InventoryClickEvent.class, Inventory.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Inventory get(final InventoryClickEvent e) {
@@ -1160,49 +1086,46 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// InventoryDragEvent
-		EventValues.registerEventValue(InventoryDragEvent.class, Player.class, new Getter<Player, InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, Player.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Player get(InventoryDragEvent event) {
 				return event.getWhoClicked() instanceof Player ? (Player) event.getWhoClicked() : null;
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryDragEvent.class, World.class, new Getter<World, InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(InventoryDragEvent event) {
+			public @NotNull World get(InventoryDragEvent event) {
 				return event.getWhoClicked().getWorld();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryDragEvent.class, ItemStack.class, new Getter<ItemStack, InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(InventoryDragEvent event) {
+			public @NotNull ItemStack get(InventoryDragEvent event) {
 				return event.getOldCursor();
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(InventoryDragEvent.class, ItemStack.class, new Getter<ItemStack, InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack get(InventoryDragEvent event) {
 				return event.getCursor();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryDragEvent.class, ItemStack[].class, new Getter<ItemStack[], InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, ItemStack[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack[] get(InventoryDragEvent event) {
 				return event.getNewItems().values().toArray(new ItemStack[0]);
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryDragEvent.class, ClickType.class, new Getter<ClickType, InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, ClickType.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ClickType get(InventoryDragEvent event) {
+			public @NotNull ClickType get(InventoryDragEvent event) {
 				return event.getType() == DragType.EVEN ? ClickType.LEFT : ClickType.RIGHT;
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryDragEvent.class, Inventory[].class, new Getter<Inventory[], InventoryDragEvent>() {
+		EventValues.registerEventValue(InventoryDragEvent.class, Inventory[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public Inventory[] get(InventoryDragEvent event) {
@@ -1217,39 +1140,37 @@ public final class BukkitEventValues {
 			}
 		}, EventValues.TIME_NOW);
 		// PrepareAnvilEvent
-		EventValues.registerEventValue(PrepareAnvilEvent.class, ItemStack.class, new Getter<ItemStack, PrepareAnvilEvent>() {
+		EventValues.registerEventValue(PrepareAnvilEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			@Nullable
 			public ItemStack get(PrepareAnvilEvent e) {
 				return e.getResult();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(PrepareAnvilEvent.class, Inventory.class, new Getter<Inventory, PrepareAnvilEvent>() {
+		EventValues.registerEventValue(PrepareAnvilEvent.class, Inventory.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Inventory get(PrepareAnvilEvent e) {
+			public @NotNull Inventory get(PrepareAnvilEvent e) {
 				return e.getInventory();
 			}
 		}, EventValues.TIME_NOW);
 		// AnvilDamagedEvent
 		if (Skript.classExists("com.destroystokyo.paper.event.block.AnvilDamagedEvent")) {
-			EventValues.registerEventValue(AnvilDamagedEvent.class, Inventory.class, new Getter<Inventory, AnvilDamagedEvent>() {
+			EventValues.registerEventValue(AnvilDamagedEvent.class, Inventory.class, new Getter<>() {
 				@Override
-				@Nullable
-				public Inventory get(AnvilDamagedEvent e) {
+				public @NotNull Inventory get(AnvilDamagedEvent e) {
 					return e.getInventory();
 				}
 			}, EventValues.TIME_NOW);
 		}
 		//BlockFertilizeEvent
-		EventValues.registerEventValue(BlockFertilizeEvent.class, Player.class, new Getter<Player, BlockFertilizeEvent>() {
+		EventValues.registerEventValue(BlockFertilizeEvent.class, Player.class, new Getter<>() {
 			@Nullable
 			@Override
 			public Player get(BlockFertilizeEvent event) {
 				return event.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(BlockFertilizeEvent.class, Block[].class, new Getter<Block[], BlockFertilizeEvent>() {
+		EventValues.registerEventValue(BlockFertilizeEvent.class, Block[].class, new Getter<>() {
 			@Nullable
 			@Override
 			public Block[] get(BlockFertilizeEvent event) {
@@ -1259,34 +1180,34 @@ public final class BukkitEventValues {
 			}
 		}, EventValues.TIME_NOW);
 		// PrepareItemCraftEvent
-		EventValues.registerEventValue(PrepareItemCraftEvent.class, ItemStack.class, new Getter<ItemStack, PrepareItemCraftEvent>() {
+		EventValues.registerEventValue(PrepareItemCraftEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(PrepareItemCraftEvent e) {
 				ItemStack item = e.getInventory().getResult();
 				return item != null ? item : AIR_IS;
 			}
 		}, 0);
-		EventValues.registerEventValue(PrepareItemCraftEvent.class, Inventory.class, new Getter<Inventory, PrepareItemCraftEvent>() {
+		EventValues.registerEventValue(PrepareItemCraftEvent.class, Inventory.class, new Getter<>() {
 			@Override
 			public Inventory get(PrepareItemCraftEvent e) {
 				return e.getInventory();
 			}
 		}, 0);
-		EventValues.registerEventValue(PrepareItemCraftEvent.class, Player.class, new Getter<Player, PrepareItemCraftEvent>() {
+		EventValues.registerEventValue(PrepareItemCraftEvent.class, Player.class, new Getter<>() {
 			@Override
 			@Nullable
 			public Player get(final PrepareItemCraftEvent e) {
 				List<HumanEntity> viewers = e.getInventory().getViewers(); // Get all viewers
-				if (viewers.size() == 0) // ... if we don't have any
+				if (viewers.isEmpty()) // ... if we don't have any
 					return null;
-				HumanEntity first = viewers.get(0); // Get first viewer and hope it is crafter
+				HumanEntity first = viewers.getFirst(); // Get first viewer and hope it is crafter
 				if (first instanceof Player) // Needs to be player... Usually it is
 					return (Player) first;
 				return null;
 			}
 		}, 0);
 		// CraftEvents - recipe namespaced key strings
-		EventValues.registerEventValue(CraftItemEvent.class, String.class, new Getter<String, CraftItemEvent>() {
+		EventValues.registerEventValue(CraftItemEvent.class, String.class, new Getter<>() {
 			@Nullable
 			@Override
 			public String get(CraftItemEvent e) {
@@ -1296,7 +1217,7 @@ public final class BukkitEventValues {
 				return null;
 			}
 		}, 0);
-		EventValues.registerEventValue(PrepareItemCraftEvent.class, String.class, new Getter<String, PrepareItemCraftEvent>() {
+		EventValues.registerEventValue(PrepareItemCraftEvent.class, String.class, new Getter<>() {
 			@Nullable
 			@Override
 			public String get(PrepareItemCraftEvent e) {
@@ -1307,81 +1228,72 @@ public final class BukkitEventValues {
 			}
 		}, 0);
 		// CraftItemEvent
-		EventValues.registerEventValue(CraftItemEvent.class, ItemStack.class, new Getter<ItemStack, CraftItemEvent>() {
+		EventValues.registerEventValue(CraftItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(CraftItemEvent e) {
+			public @NotNull ItemStack get(CraftItemEvent e) {
 				return e.getRecipe().getResult();
 			}
 		}, 0);
 		//InventoryOpenEvent
-		EventValues.registerEventValue(InventoryOpenEvent.class, Player.class, new Getter<Player, InventoryOpenEvent>() {
+		EventValues.registerEventValue(InventoryOpenEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final InventoryOpenEvent e) {
+			public @NotNull Player get(final InventoryOpenEvent e) {
 				return (Player) e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryOpenEvent.class, Inventory.class, new Getter<Inventory, InventoryOpenEvent>() {
+		EventValues.registerEventValue(InventoryOpenEvent.class, Inventory.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Inventory get(final InventoryOpenEvent e) {
+			public @NotNull Inventory get(final InventoryOpenEvent e) {
 				return e.getInventory();
 			}
 		}, 0);
 		//InventoryCloseEvent
-		EventValues.registerEventValue(InventoryCloseEvent.class, Player.class, new Getter<Player, InventoryCloseEvent>() {
+		EventValues.registerEventValue(InventoryCloseEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(final InventoryCloseEvent e) {
+			public @NotNull Player get(final InventoryCloseEvent e) {
 				return (Player) e.getPlayer();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryCloseEvent.class, Inventory.class, new Getter<Inventory, InventoryCloseEvent>() {
+		EventValues.registerEventValue(InventoryCloseEvent.class, Inventory.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Inventory get(final InventoryCloseEvent e) {
+			public @NotNull Inventory get(final InventoryCloseEvent e) {
 				return e.getInventory();
 			}
 		}, 0);
 		if (Skript.classExists("org.bukkit.event.inventory.InventoryCloseEvent$Reason"))
-			EventValues.registerEventValue(InventoryCloseEvent.class, InventoryCloseEvent.Reason.class, new Getter<InventoryCloseEvent.Reason, InventoryCloseEvent>() {
+			EventValues.registerEventValue(InventoryCloseEvent.class, InventoryCloseEvent.Reason.class, new Getter<>() {
 				@Override
 				public InventoryCloseEvent.Reason get(InventoryCloseEvent event) {
 					return event.getReason();
 				}
 			}, EventValues.TIME_NOW);
 		//InventoryPickupItemEvent
-		EventValues.registerEventValue(InventoryPickupItemEvent.class, Inventory.class, new Getter<Inventory, InventoryPickupItemEvent>() {
-			@Nullable
+		EventValues.registerEventValue(InventoryPickupItemEvent.class, Inventory.class, new Getter<>() {
 			@Override
-			public Inventory get(InventoryPickupItemEvent event) {
+			public @NotNull Inventory get(InventoryPickupItemEvent event) {
 				return event.getInventory();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryPickupItemEvent.class, Item.class, new Getter<Item, InventoryPickupItemEvent>() {
-			@Nullable
+		EventValues.registerEventValue(InventoryPickupItemEvent.class, Item.class, new Getter<>() {
 			@Override
-			public Item get(InventoryPickupItemEvent event) {
+			public @NotNull Item get(InventoryPickupItemEvent event) {
 				return event.getItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(InventoryPickupItemEvent.class, ItemStack.class, new Getter<ItemStack, InventoryPickupItemEvent>() {
-			@Nullable
+		EventValues.registerEventValue(InventoryPickupItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			public ItemStack get(InventoryPickupItemEvent event) {
+			public @NotNull ItemStack get(InventoryPickupItemEvent event) {
 				return event.getItem().getItemStack();
 			}
 		}, 0);
 		//PortalCreateEvent
-		EventValues.registerEventValue(PortalCreateEvent.class, World.class, new Getter<World, PortalCreateEvent>() {
+		EventValues.registerEventValue(PortalCreateEvent.class, World.class, new Getter<>() {
 			@Override
-			@Nullable
-			public World get(final PortalCreateEvent e) {
+			public @NotNull World get(final PortalCreateEvent e) {
 				return e.getWorld();
 			}
 		}, 0);
-		EventValues.registerEventValue(PortalCreateEvent.class, Block[].class, new Getter<Block[], PortalCreateEvent>() {
+		EventValues.registerEventValue(PortalCreateEvent.class, Block[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public Block[] get(PortalCreateEvent event) {
@@ -1391,7 +1303,7 @@ public final class BukkitEventValues {
 			}
 		}, EventValues.TIME_NOW);
 		if (Skript.methodExists(PortalCreateEvent.class, "getEntity")) { // Minecraft 1.14+
-			EventValues.registerEventValue(PortalCreateEvent.class, Entity.class, new Getter<Entity, PortalCreateEvent>() {
+			EventValues.registerEventValue(PortalCreateEvent.class, Entity.class, new Getter<>() {
 				@Override
 				@Nullable
 				public Entity get(final PortalCreateEvent e) {
@@ -1400,7 +1312,7 @@ public final class BukkitEventValues {
 			}, 0);
 		}
 		//PlayerEditBookEvent
-		EventValues.registerEventValue(PlayerEditBookEvent.class, ItemStack.class, new Getter<ItemStack, PlayerEditBookEvent>() {
+		EventValues.registerEventValue(PlayerEditBookEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(PlayerEditBookEvent event) {
 				ItemStack book = new ItemStack(Material.WRITABLE_BOOK);
@@ -1408,7 +1320,7 @@ public final class BukkitEventValues {
 				return book;
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(PlayerEditBookEvent.class, ItemStack.class, new Getter<ItemStack, PlayerEditBookEvent>() {
+		EventValues.registerEventValue(PlayerEditBookEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(PlayerEditBookEvent event) {
 				ItemStack book = new ItemStack(Material.WRITABLE_BOOK);
@@ -1416,116 +1328,105 @@ public final class BukkitEventValues {
 				return book;
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(PlayerEditBookEvent.class, String[].class, new Getter<String[], PlayerEditBookEvent>() {
+		EventValues.registerEventValue(PlayerEditBookEvent.class, String[].class, new Getter<>() {
 			@Override
 			public String[] get(PlayerEditBookEvent event) {
 				return event.getPreviousBookMeta().getPages().toArray(new String[0]);
 			}
 		}, EventValues.TIME_PAST);
-		EventValues.registerEventValue(PlayerEditBookEvent.class, String[].class, new Getter<String[], PlayerEditBookEvent>() {
+		EventValues.registerEventValue(PlayerEditBookEvent.class, String[].class, new Getter<>() {
 			@Override
 			public String[] get(PlayerEditBookEvent event) {
 				return event.getNewBookMeta().getPages().toArray(new String[0]);
 			}
 		}, EventValues.TIME_NOW);
 		//ItemDespawnEvent
-		EventValues.registerEventValue(ItemDespawnEvent.class, Item.class, new Getter<Item, ItemDespawnEvent>() {
+		EventValues.registerEventValue(ItemDespawnEvent.class, Item.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Item get(ItemDespawnEvent e) {
+			public @NotNull Item get(ItemDespawnEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
-		EventValues.registerEventValue(ItemDespawnEvent.class, ItemStack.class, new Getter<ItemStack, ItemDespawnEvent>() {
+		EventValues.registerEventValue(ItemDespawnEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(ItemDespawnEvent e) {
+			public @NotNull ItemStack get(ItemDespawnEvent e) {
 				return e.getEntity().getItemStack();
 			}
 		}, 0);
 		//ItemMergeEvent
-		EventValues.registerEventValue(ItemMergeEvent.class, Item.class, new Getter<Item, ItemMergeEvent>() {
+		EventValues.registerEventValue(ItemMergeEvent.class, Item.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Item get(ItemMergeEvent e) {
+			public @NotNull Item get(ItemMergeEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
-		EventValues.registerEventValue(ItemMergeEvent.class, Item.class, new Getter<Item, ItemMergeEvent>() {
+		EventValues.registerEventValue(ItemMergeEvent.class, Item.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Item get(ItemMergeEvent e) {
+			public @NotNull Item get(ItemMergeEvent e) {
 				return e.getTarget();
 			}
 		}, 1);
-		EventValues.registerEventValue(ItemMergeEvent.class, ItemStack.class, new Getter<ItemStack, ItemMergeEvent>() {
+		EventValues.registerEventValue(ItemMergeEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(ItemMergeEvent e) {
+			public @NotNull ItemStack get(ItemMergeEvent e) {
 				return e.getEntity().getItemStack();
 			}
 		}, 0);
 		//PlayerTeleportEvent
-		EventValues.registerEventValue(PlayerTeleportEvent.class, TeleportCause.class, new Getter<TeleportCause, PlayerTeleportEvent>() {
+		EventValues.registerEventValue(PlayerTeleportEvent.class, TeleportCause.class, new Getter<>() {
 			@Override
-			@Nullable
-			public TeleportCause get(final PlayerTeleportEvent e) {
+			public @NotNull TeleportCause get(final PlayerTeleportEvent e) {
 				return e.getCause();
 			}
 		}, 0);
 		//EntityMoveEvent
 		if (Skript.classExists("io.papermc.paper.event.entity.EntityMoveEvent")) {
-			EventValues.registerEventValue(EntityMoveEvent.class, Location.class, new Getter<Location, EntityMoveEvent>() {
+			EventValues.registerEventValue(EntityMoveEvent.class, Location.class, new Getter<>() {
 				@Override
-				@Nullable
-				public Location get(EntityMoveEvent e) {
+				public @NotNull Location get(EntityMoveEvent e) {
 					return e.getFrom();
 				}
 			}, EventValues.TIME_NOW);
-			EventValues.registerEventValue(EntityMoveEvent.class, Location.class, new Getter<Location, EntityMoveEvent>() {
+			EventValues.registerEventValue(EntityMoveEvent.class, Location.class, new Getter<>() {
 				@Override
-				@Nullable
-				public Location get(EntityMoveEvent e) {
+				public @NotNull Location get(EntityMoveEvent e) {
 					return e.getTo();
 				}
 			}, EventValues.TIME_FUTURE);
 		}
 		//PlayerToggleFlightEvent
-		EventValues.registerEventValue(PlayerToggleFlightEvent.class, Player.class, new Getter<Player, PlayerToggleFlightEvent>() {
+		EventValues.registerEventValue(PlayerToggleFlightEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(PlayerToggleFlightEvent e) {
+			public @NotNull Player get(PlayerToggleFlightEvent e) {
 				return e.getPlayer();
 			}
 		}, 0);
 		//CreatureSpawnEvent
-		EventValues.registerEventValue(CreatureSpawnEvent.class, SpawnReason.class, new Getter<SpawnReason, CreatureSpawnEvent>() {
+		EventValues.registerEventValue(CreatureSpawnEvent.class, SpawnReason.class, new Getter<>() {
 			@Override
-			@Nullable
-			public SpawnReason get(CreatureSpawnEvent e) {
+			public @NotNull SpawnReason get(CreatureSpawnEvent e) {
 				return e.getSpawnReason();
 			}
 		}, 0);
 		//FireworkExplodeEvent
-		EventValues.registerEventValue(FireworkExplodeEvent.class, Firework.class, new Getter<Firework, FireworkExplodeEvent>() {
+		EventValues.registerEventValue(FireworkExplodeEvent.class, Firework.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Firework get(FireworkExplodeEvent e) {
+			public @NotNull Firework get(FireworkExplodeEvent e) {
 				return e.getEntity();
 			}
 		}, 0);
-		EventValues.registerEventValue(FireworkExplodeEvent.class, FireworkEffect.class, new Getter<FireworkEffect, FireworkExplodeEvent>() {
+		EventValues.registerEventValue(FireworkExplodeEvent.class, FireworkEffect.class, new Getter<>() {
 			@Override
 			@Nullable
 			public FireworkEffect get(FireworkExplodeEvent e) {
 				List<FireworkEffect> effects = e.getEntity().getFireworkMeta().getEffects();
-				if (effects.size() == 0)
+				if (effects.isEmpty())
 					return null;
-				return effects.get(0);
+				return effects.getFirst();
 			}
 		}, 0);
 		//PlayerRiptideEvent
-		EventValues.registerEventValue(PlayerRiptideEvent.class, ItemStack.class, new Getter<ItemStack, PlayerRiptideEvent>() {
+		EventValues.registerEventValue(PlayerRiptideEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(PlayerRiptideEvent e) {
 				return e.getItem();
@@ -1533,113 +1434,100 @@ public final class BukkitEventValues {
 		}, 0);
 		//PlayerArmorChangeEvent
 		if (Skript.classExists("com.destroystokyo.paper.event.player.PlayerArmorChangeEvent")) {
-			EventValues.registerEventValue(PlayerArmorChangeEvent.class, ItemStack.class, new Getter<ItemStack, PlayerArmorChangeEvent>() {
+			EventValues.registerEventValue(PlayerArmorChangeEvent.class, ItemStack.class, new Getter<>() {
 				@Override
-				@Nullable
-				public ItemStack get(PlayerArmorChangeEvent e) {
+				public @NotNull ItemStack get(PlayerArmorChangeEvent e) {
 					return e.getNewItem();
 				}
 			}, 0);
 		}
 		//PlayerInventorySlotChangeEvent
 		if (Skript.classExists("io.papermc.paper.event.player.PlayerInventorySlotChangeEvent")) {
-			EventValues.registerEventValue(PlayerInventorySlotChangeEvent.class, ItemStack.class, new Getter<ItemStack, PlayerInventorySlotChangeEvent>() {
+			EventValues.registerEventValue(PlayerInventorySlotChangeEvent.class, ItemStack.class, new Getter<>() {
 				@Override
-				@Nullable
-				public ItemStack get(PlayerInventorySlotChangeEvent event) {
+				public @NotNull ItemStack get(PlayerInventorySlotChangeEvent event) {
 					return event.getNewItemStack();
 				}
 			}, EventValues.TIME_NOW);
-			EventValues.registerEventValue(PlayerInventorySlotChangeEvent.class, ItemStack.class, new Getter<ItemStack, PlayerInventorySlotChangeEvent>() {
+			EventValues.registerEventValue(PlayerInventorySlotChangeEvent.class, ItemStack.class, new Getter<>() {
 				@Override
-				@Nullable
-				public ItemStack get(PlayerInventorySlotChangeEvent event) {
+				public @NotNull ItemStack get(PlayerInventorySlotChangeEvent event) {
 					return event.getOldItemStack();
 				}
 			}, EventValues.TIME_PAST);
 		}
 		//PrepareItemEnchantEvent
-		EventValues.registerEventValue(PrepareItemEnchantEvent.class, Player.class, new Getter<Player, PrepareItemEnchantEvent>() {
+		EventValues.registerEventValue(PrepareItemEnchantEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(PrepareItemEnchantEvent e) {
+			public @NotNull Player get(PrepareItemEnchantEvent e) {
 				return e.getEnchanter();
 			}
 		}, 0);
-		EventValues.registerEventValue(PrepareItemEnchantEvent.class, ItemStack.class, new Getter<ItemStack, PrepareItemEnchantEvent>() {
+		EventValues.registerEventValue(PrepareItemEnchantEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(PrepareItemEnchantEvent e) {
+			public @NotNull ItemStack get(PrepareItemEnchantEvent e) {
 				return e.getItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(PrepareItemEnchantEvent.class, Block.class, new Getter<Block, PrepareItemEnchantEvent>() {
+		EventValues.registerEventValue(PrepareItemEnchantEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(PrepareItemEnchantEvent e) {
+			public @NotNull Block get(PrepareItemEnchantEvent e) {
 				return e.getEnchantBlock();
 			}
 		}, 0);
 		//EnchantItemEvent
-		EventValues.registerEventValue(EnchantItemEvent.class, Player.class, new Getter<Player, EnchantItemEvent>() {
+		EventValues.registerEventValue(EnchantItemEvent.class, Player.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Player get(EnchantItemEvent e) {
+			public @NotNull Player get(EnchantItemEvent e) {
 				return e.getEnchanter();
 			}
 		}, 0);
-		EventValues.registerEventValue(EnchantItemEvent.class, ItemStack.class, new Getter<ItemStack, EnchantItemEvent>() {
+		EventValues.registerEventValue(EnchantItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(EnchantItemEvent e) {
+			public @NotNull ItemStack get(EnchantItemEvent e) {
 				return e.getItem();
 			}
 		}, 0);
-		EventValues.registerEventValue(EnchantItemEvent.class, Block.class, new Getter<Block, EnchantItemEvent>() {
+		EventValues.registerEventValue(EnchantItemEvent.class, Block.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Block get(EnchantItemEvent e) {
+			public @NotNull Block get(EnchantItemEvent e) {
 				return e.getEnchantBlock();
 			}
 		}, 0);
-		EventValues.registerEventValue(HorseJumpEvent.class, Entity.class, new Getter<Entity, HorseJumpEvent>() {
-			@Nullable
+		EventValues.registerEventValue(HorseJumpEvent.class, Entity.class, new Getter<>() {
 			@Override
-			public Entity get(HorseJumpEvent evt) {
+			public @NotNull Entity get(HorseJumpEvent evt) {
 				return evt.getEntity();
 			}
 		}, 0);
 		// PlayerTradeEvent
 		if (Skript.classExists("io.papermc.paper.event.player.PlayerTradeEvent")) {
-			EventValues.registerEventValue(PlayerTradeEvent.class, AbstractVillager.class, new Getter<AbstractVillager, PlayerTradeEvent>() {
+			EventValues.registerEventValue(PlayerTradeEvent.class, AbstractVillager.class, new Getter<>() {
 				@Override
-				@Nullable
-				public AbstractVillager get(PlayerTradeEvent event) {
+				public @NotNull AbstractVillager get(PlayerTradeEvent event) {
 					return event.getVillager();
 				}
 			}, EventValues.TIME_NOW);
 		}
 		// PlayerChangedWorldEvent
-		EventValues.registerEventValue(PlayerChangedWorldEvent.class, World.class, new Getter<World, PlayerChangedWorldEvent>() {
-			@Nullable
+		EventValues.registerEventValue(PlayerChangedWorldEvent.class, World.class, new Getter<>() {
 			@Override
-			public World get(PlayerChangedWorldEvent e) {
+			public @NotNull World get(PlayerChangedWorldEvent e) {
 				return e.getFrom();
 			}
 		}, -1);
 
 		// PlayerEggThrowEvent
-		EventValues.registerEventValue(PlayerEggThrowEvent.class, Egg.class, new Getter<Egg, PlayerEggThrowEvent>() {
+		EventValues.registerEventValue(PlayerEggThrowEvent.class, Egg.class, new Getter<>() {
 			@Override
-			@Nullable
-			public Egg get(PlayerEggThrowEvent event) {
+			public @NotNull Egg get(PlayerEggThrowEvent event) {
 				return event.getEgg();
 			}
 		}, EventValues.TIME_NOW);
 
 		// PlayerStopUsingItemEvent
 		if (Skript.classExists("io.papermc.paper.event.player.PlayerStopUsingItemEvent")) {
-			EventValues.registerEventValue(PlayerStopUsingItemEvent.class, Timespan.class, new Getter<Timespan, PlayerStopUsingItemEvent>() {
+			EventValues.registerEventValue(PlayerStopUsingItemEvent.class, Timespan.class, new Getter<>() {
 				@Override
 				public Timespan get(PlayerStopUsingItemEvent event) {
 					return Timespan.fromTicks(event.getTicksHeldFor());
@@ -1649,17 +1537,16 @@ public final class BukkitEventValues {
 
 		// LootGenerateEvent
 		if (Skript.classExists("org.bukkit.event.world.LootGenerateEvent")) {
-			EventValues.registerEventValue(LootGenerateEvent.class, Entity.class, new Getter<Entity, LootGenerateEvent>() {
+			EventValues.registerEventValue(LootGenerateEvent.class, Entity.class, new Getter<>() {
 				@Override
 				@Nullable
 				public Entity get(LootGenerateEvent event) {
 					return event.getEntity();
 				}
 			}, EventValues.TIME_NOW);
-			EventValues.registerEventValue(LootGenerateEvent.class, Location.class, new Getter<Location, LootGenerateEvent>() {
+			EventValues.registerEventValue(LootGenerateEvent.class, Location.class, new Getter<>() {
 				@Override
-				@Nullable
-				public Location get(LootGenerateEvent event) {
+				public @NotNull Location get(LootGenerateEvent event) {
 					return event.getLootContext().getLocation();
 				}
 			}, EventValues.TIME_NOW);
@@ -1698,34 +1585,32 @@ public final class BukkitEventValues {
 		// This event value is restricted to MC 1.14+ due to an API change which has the return type changed
 		// which throws a NoSuchMethodError if used in a 1.13 server.
 		if (Skript.isRunningMinecraft(1, 14))
-			EventValues.registerEventValue(PlayerPickupArrowEvent.class, Projectile.class, new Getter<Projectile, PlayerPickupArrowEvent>() {
+			EventValues.registerEventValue(PlayerPickupArrowEvent.class, Projectile.class, new Getter<>() {
 				@Override
 				public Projectile get(PlayerPickupArrowEvent event) {
 					return event.getArrow();
 				}
 			}, EventValues.TIME_NOW);
 
-		EventValues.registerEventValue(PlayerPickupArrowEvent.class, ItemStack.class, new Getter<ItemStack, PlayerPickupArrowEvent>() {
+		EventValues.registerEventValue(PlayerPickupArrowEvent.class, ItemStack.class, new Getter<>() {
 			@Override
-			@Nullable
-			public ItemStack get(PlayerPickupArrowEvent event) {
+			public @NotNull ItemStack get(PlayerPickupArrowEvent event) {
 				return event.getItem().getItemStack();
 			}
 		}, EventValues.TIME_NOW);
 
 		//PlayerQuitEvent
 		if (Skript.classExists("org.bukkit.event.player.PlayerQuitEvent$QuitReason"))
-			EventValues.registerEventValue(PlayerQuitEvent.class, QuitReason.class, new Getter<QuitReason, PlayerQuitEvent>() {
+			EventValues.registerEventValue(PlayerQuitEvent.class, QuitReason.class, new Getter<>() {
 				@Override
-				@Nullable
-				public QuitReason get(PlayerQuitEvent event) {
+				public @NotNull QuitReason get(PlayerQuitEvent event) {
 					return event.getReason();
 				}
 			}, EventValues.TIME_NOW);
 
 		// PlayerStonecutterRecipeSelectEvent
 		if (Skript.classExists("io.papermc.paper.event.player.PlayerStonecutterRecipeSelectEvent"))
-			EventValues.registerEventValue(PlayerStonecutterRecipeSelectEvent.class, ItemStack.class, new Getter<ItemStack, PlayerStonecutterRecipeSelectEvent>() {
+			EventValues.registerEventValue(PlayerStonecutterRecipeSelectEvent.class, ItemStack.class, new Getter<>() {
 				@Override
 				public ItemStack get(PlayerStonecutterRecipeSelectEvent event) {
 					return event.getStonecuttingRecipe().getResult();
@@ -1733,24 +1618,23 @@ public final class BukkitEventValues {
 			}, EventValues.TIME_NOW);
 
 		// EntityTransformEvent
-		EventValues.registerEventValue(EntityTransformEvent.class, Entity[].class, new Getter<Entity[], EntityTransformEvent>() {
+		EventValues.registerEventValue(EntityTransformEvent.class, Entity[].class, new Getter<>() {
 			@Override
 			@Nullable
 			public Entity[] get(EntityTransformEvent event) {
-				return event.getTransformedEntities().stream().toArray(Entity[]::new);
+				return event.getTransformedEntities().toArray(Entity[]::new);
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(EntityTransformEvent.class, TransformReason.class, new Getter<TransformReason, EntityTransformEvent>() {
+		EventValues.registerEventValue(EntityTransformEvent.class, TransformReason.class, new Getter<>() {
 			@Override
-			@Nullable
-			public TransformReason get(EntityTransformEvent event) {
+			public @NotNull TransformReason get(EntityTransformEvent event) {
 				return event.getTransformReason();
 			}
 		}, EventValues.TIME_NOW);
 
 		// BellRingEvent - these are BlockEvents and not EntityEvents, so they have declared methods for getEntity()
 		if (Skript.classExists("org.bukkit.event.block.BellRingEvent")) {
-			EventValues.registerEventValue(BellRingEvent.class, Entity.class, new Getter<Entity, BellRingEvent>() {
+			EventValues.registerEventValue(BellRingEvent.class, Entity.class, new Getter<>() {
 				@Override
 				@Nullable
 				public Entity get(BellRingEvent event) {
@@ -1758,7 +1642,7 @@ public final class BukkitEventValues {
 				}
 			}, EventValues.TIME_NOW);
 
-			EventValues.registerEventValue(BellRingEvent.class, Direction.class, new Getter<Direction, BellRingEvent>() {
+			EventValues.registerEventValue(BellRingEvent.class, Direction.class, new Getter<>() {
 				@Override
 				public Direction get(BellRingEvent event) {
 					return new Direction(event.getDirection(), 1);
@@ -1767,7 +1651,7 @@ public final class BukkitEventValues {
 		} else if (Skript.classExists("io.papermc.paper.event.block.BellRingEvent")) {
 			EventValues.registerEventValue(
 				io.papermc.paper.event.block.BellRingEvent.class, Entity.class,
-				new Getter<Entity, io.papermc.paper.event.block.BellRingEvent>() {
+				new Getter<>() {
 					@Override
 					@Nullable
 					public Entity get(io.papermc.paper.event.block.BellRingEvent event) {
@@ -1777,7 +1661,7 @@ public final class BukkitEventValues {
 		}
 
 		if (Skript.classExists("org.bukkit.event.block.BellResonateEvent")) {
-			EventValues.registerEventValue(BellResonateEvent.class, Entity[].class, new Getter<Entity[], BellResonateEvent>() {
+			EventValues.registerEventValue(BellResonateEvent.class, Entity[].class, new Getter<>() {
 				@Override
 				@Nullable
 				public Entity[] get(BellResonateEvent event) {
@@ -1787,31 +1671,35 @@ public final class BukkitEventValues {
 		}
 
 		// InventoryMoveItemEvent
-		EventValues.registerEventValue(InventoryMoveItemEvent.class, Inventory.class, new Getter<Inventory, InventoryMoveItemEvent>() {
+		EventValues.registerEventValue(InventoryMoveItemEvent.class, Inventory.class, new Getter<>() {
 			@Override
 			public Inventory get(InventoryMoveItemEvent event) {
 				return event.getSource();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryMoveItemEvent.class, Inventory.class, new Getter<Inventory, InventoryMoveItemEvent>() {
+		EventValues.registerEventValue(InventoryMoveItemEvent.class, Inventory.class, new Getter<>() {
 			@Override
 			public Inventory get(InventoryMoveItemEvent event) {
 				return event.getDestination();
 			}
 		}, EventValues.TIME_FUTURE);
-		EventValues.registerEventValue(InventoryMoveItemEvent.class, Block.class, new Getter<Block, InventoryMoveItemEvent>() {
+		EventValues.registerEventValue(InventoryMoveItemEvent.class, Block.class, new Getter<>() {
 			@Override
-			public Block get(InventoryMoveItemEvent event) {
-				return event.getSource().getLocation().getBlock();
+			public @Nullable Block get(InventoryMoveItemEvent event) {
+				Location location = event.getSource().getLocation();
+				if (location == null) return null;
+				return location.getBlock();
 			}
 		}, EventValues.TIME_NOW);
-		EventValues.registerEventValue(InventoryMoveItemEvent.class, Block.class, new Getter<Block, InventoryMoveItemEvent>() {
+		EventValues.registerEventValue(InventoryMoveItemEvent.class, Block.class, new Getter<>() {
 			@Override
-			public Block get(InventoryMoveItemEvent event) {
-				return event.getDestination().getLocation().getBlock();
+			public @Nullable Block get(InventoryMoveItemEvent event) {
+				Location location = event.getDestination().getLocation();
+				if (location == null) return null;
+				return location.getBlock();
 			}
 		}, EventValues.TIME_FUTURE);
-		EventValues.registerEventValue(InventoryMoveItemEvent.class, ItemStack.class, new Getter<ItemStack, InventoryMoveItemEvent>() {
+		EventValues.registerEventValue(InventoryMoveItemEvent.class, ItemStack.class, new Getter<>() {
 			@Override
 			public ItemStack get(InventoryMoveItemEvent event) {
 				return event.getItem();
@@ -1819,10 +1707,9 @@ public final class BukkitEventValues {
 		}, EventValues.TIME_NOW);
 
 		// EntityRegainHealthEvent
-		EventValues.registerEventValue(EntityRegainHealthEvent.class, RegainReason.class, new Getter<RegainReason, EntityRegainHealthEvent>() {
+		EventValues.registerEventValue(EntityRegainHealthEvent.class, RegainReason.class, new Getter<>() {
 			@Override
-			@Nullable
-			public RegainReason get(EntityRegainHealthEvent event) {
+			public @NotNull RegainReason get(EntityRegainHealthEvent event) {
 				return event.getRegainReason();
 			}
 		}, EventValues.TIME_NOW);
